# OpenCV_MotionDetection_Test_1

./: CMakeLists.txt  main.cpp
